Grace/tests/gibbs/errors/t001.grace
// ERROR = P1025
var count := 5
print("Count is " . 42)
